--- a/index.html
+++ b/index.html
@@ -1,23 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment 1</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <a href="./registration.html">Register here</a>
-
+      <a href="./registration.html">Register here</a>
     </nav>
 
     <main>
-        <section>
+      <section>
+        <h4>Little info about me</h4>
+        <p>
+          Hello! I'm Onyebuchi ifedi, a passionate web developer hailing from
+          Enugun state, Nigeria. Born on 24th Mrach 1998, I'm on a mission to
+          bring creativity to life through code.
+        </p>
 
-        </section>
+        <p>
+          Joined Altschool Africa to help me in this journey, I'm fascinated by
+          the power of HTML in structuring content and CSS in styling it. Every
+          line of code feels like a step toward building something tangible on
+          the web.
+        </p>
+
+        <p>
+          In my learning journey, I'm discovering the magic of turning simple
+          text into beautifully designed web pages. From creating my first
+          "Hello World" webpage to experimenting with different CSS styles,
+          every small achievement fuels my excitement to learn more.
+        </p>
+
+        <p>
+          I'm eager to connect with fellow learners, mentors, and anyone who
+          shares a love for coding.
+        </p>
+      </section>
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
